# efficient-ml-set

./: .gitignore  README.md
final_project/: CITATION.cff  DESIGN.md  PLAN.md  PROGRESS.md  README.md  SUBMISSION.md  pyproject.toml
final_project/Docker_VSCode/: CMakeLists.txt  README.md  build.sh  convert_to_onnx.py  install_dependencies.sh  install_python_deps.sh  main.cpp  requirements.txt
final_project/artifacts/: README.md  class_map.json
final_project/artifacts/model_cards/: m0_fp32.md  m1_int8_ptq.md  m2_int8_qat.md  m3_pruned_fp32.md  m4_pruned_qat.md
final_project/artifacts/policies/: bobcat_coyote_v1.json  bobcat_m1_ptq_entropy_v1.json  bobcat_m1_ptq_minmax_v1.json  bobcat_m1_ptq_percentile_v1.json  bobcat_m2_qat_lr1e-5_v1.json  bobcat_m2_qat_lr3e-5_v1.json  bobcat_m2_qat_lr5e-5_v1.json  bobcat_m3_prune_c15_v1.json  bobcat_m3_prune_c30_v1.json  bobcat_m3_prune_c45_v1.json  bobcat_m4_qat_lr5e-5_v1.json  bobcat_v1.json
final_project/configs/data/: classes.yaml
final_project/configs/env/: pins.env
final_project/configs/optimize/: m1_ptq.yaml  m2_qat.yaml  m2_qat_seed17.yaml  m2_qat_seed73.yaml  m3_prune.yaml  m4_qat.yaml
final_project/configs/train/: m0_fp32.yaml  m0_fp32_seed17.yaml  m0_fp32_seed73.yaml
final_project/cpp/: CMakeLists.txt
final_project/cpp/src/: benchmark.cpp  cpu_features.cpp  hashing.cpp  main.cpp  policy.cpp  preprocess.cpp  session.cpp
final_project/cpp/tests/: CMakeLists.txt  test_benchmark.cpp  test_cpu_features.cpp  test_logging.cpp  test_policy.cpp  test_preprocess.cpp
final_project/cpp/tools/: ort_probe.cpp
final_project/data/: README.md
final_project/data/manifests/: benchmark_val_1000.jsonl  benchmark_val_1000.provenance.json  calibration_1024.jsonl  cis_val.jsonl  cis_val_clean.jsonl  trans_val.jsonl
final_project/demo/: README.md
final_project/deploy/pi/: README.md  install.sh  preflight.sh  run_benchmark.sh  run_demo.sh  run_f2_profile.sh  run_f2_threads.sh  run_f4_pi_benchmark.sh
final_project/docker/: Dockerfile.native  Dockerfile.target
final_project/experiments/tiger_module/: README.md
final_project/notebooks/: 01_data_audit.ipynb  02_results_analysis.ipynb
final_project/report/: final_report.md  report.css
final_project/results/: gate_a.json
final_project/results/a4/: a4_gate.json
final_project/results/ablations/: data_input_decision.json  data_input_decision.md  head_tie_test.json  input_cost.json  input_tie_test.json
final_project/results/analysis/: canonical_results.json  definition_of_done.md
final_project/results/data_audit/: dimension_report.json  empty_supplement_fetch.json  empty_supplement_selection.json  gate_b.json  manifest_report.json  shortcut_probe.json
final_project/results/e1/: e1_gate.json
final_project/results/e4/: p4_dataset_parity_m0.json
final_project/results/e5/: benchmark_m0.json
final_project/results/e6/: decode_drift.json  e6_gate.json  native_vs_target.json  optimization_matrix.json  qemu_parity.json
final_project/results/e7/: bundle_audit.json  e7_bundle.json  preflight.json
final_project/results/e8/: dry_run.json
final_project/results/f1/: demo_predictions.jsonl  environment.json  f1_host_interfaces.txt
final_project/results/f2/: F2_ANALYSIS.md  bench_M0_arena_off.json  bench_M0_base.json  bench_M0_decode_half.json  bench_M0_decode_quarter.json  bench_M0_graph_extended.json  bench_M0_preprocess_reference.json  bench_M0_threads2.json  bench_M0_threads3.json  bench_M0_threads4.json  bench_M2_base.json  bench_M4_base.json  f2_summary.json  thr_M0_t1.json  thr_M0_t2.json  thr_M0_t3.json  thr_M0_t4.json  thr_M2_t1.json  thr_M2_t2.json  thr_M2_t3.json  thr_M2_t4.json  thr_M4_t1.json  thr_M4_t2.json  thr_M4_t3.json  thr_M4_t4.json
final_project/results/f3/: freeze_manifest.json  threshold_catalog.json
final_project/results/f4/: F4_ANALYSIS.md  bench_M0_rep1.json  bench_M0_rep2.json  bench_M0_rep3.json  bench_M2_rep1.json  bench_M2_rep2.json  bench_M2_rep3.json  bench_M4_rep1.json  bench_M4_rep2.json  bench_M4_rep3.json  f4_summary.json  frozen_test_M0.json  frozen_test_M2.json  gx10_parity_M0.jsonl  gx10_parity_M2.jsonl  parity_comparison.json  pi_parity_M0.jsonl  pi_parity_M2.jsonl
final_project/results/f5/: bench_M0_rep1.json  bench_M0_rep2.json  bench_M0_rep3.json  bench_M2_rep1.json  bench_M2_rep2.json  bench_M2_rep3.json  bench_M4_rep1.json  bench_M4_rep2.json  bench_M4_rep3.json  f5_reproducibility.json  pi_parity_M0.jsonl  pi_parity_M2.jsonl
final_project/results/model_selection/: comparison.jsonl  final_decision.md  pre_pi_freeze.json  pre_pi_shortlist.json  pre_pi_shortlist.md
final_project/results/p0/: p0_gate.json
final_project/results/provenance/: RUNS.md  project_start.json
final_project/scripts/: audit_target_compat.sh  build_bundle.sh  build_canonical_results.py  build_freeze_manifest.py  build_native_container.sh  build_notebook_01_data_audit.py  build_notebook_02_results_analysis.py  build_target_container.sh  build_threshold_catalog.py  capture_provenance.py  compare_pi_parity.py  eval_frozen_test.py  isa_probe.c  run_a4_slice.sh  run_c4_parity.sh  run_confirmation_seeds.sh  run_d1_p3p4.sh  run_e1_foundation.sh  run_e4_m0_parity.sh  run_e5_benchmark.sh  run_e6_decode_drift.sh  run_e6_gate.sh  run_e6_native_vs_target.sh  run_e6_optimization_matrix.sh  run_e6_qemu_parity.sh  run_e7_bundle.sh  run_e7_preflight.sh  run_e8_dry_run.sh  run_f4_frozen_test.sh  run_p0_spike.sh  setup_gx10.sh  summarize_f2.py  summarize_f4.py  summarize_f5.py  verify_target_env.sh  verify_vendored.sh
final_project/slides/: build_deck.js  final_presentation.pptx
final_project/src/wildlife_trigger/: __init__.py  calibrate.py  comparison.py  export.py  metrics.py  policy.py  provenance.py  rebind_policy.py  runs.py  train.py
final_project/tests/fixtures/: golden_raw.json  golden_tensors_256x192.json  p2_fixtures.json
final_project/tests/python/: conftest.py  test_ap_stability.py  test_average_precision.py  test_cache.py  test_calibrate.py  test_calibration_manifest.py  test_candidate_chain.py  test_comparison.py  test_d6_shortlist.py  (+26 more)
(+414 files in other folders)
