[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "wildlife-trigger"
version = "0.1.0"
description = "CPU-only wildlife camera-trap shutter trigger for Raspberry Pi 5"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "Vadym" }]

# Loose here, exact in the lockfile. A2 pins the resolved versions; DESIGN §9.2
# requires every run to record what it actually resolved to.
dependencies = [
    "numpy>=2.0",
    "torch>=2.5",
    "torchvision>=0.20",
    "onnx>=1.16",
    "onnxruntime>=1.19",
    "opencv-python-headless>=4.10",
    "pyyaml>=6.0",
    "pillow>=10.0",
    "torch-pruning>=1.5",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.6"]
notebooks = ["jupyter>=1.0", "matplotlib>=3.9", "pandas>=2.2"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests/python"]
pythonpath = ["src"]
# Fail on an unregistered mark rather than silently skipping a test suite.
addopts = "-ra --strict-markers --strict-config"
markers = [
    "slow: takes more than a few seconds",
    "gpu: requires CUDA",
    "needs_data: requires the downloaded CCT-20 dataset (Gate B onward)",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
