[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "wildlife-trigger"
version = "0.1.0"
description = "CPU-only wildlife camera-trap shutter trigger for Raspberry Pi 5"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "Vadym" }]

# Ranges are fine for anything whose version cannot change a result. The two
# exact pins are not style: they are a contract with the C++ side.
#
#   onnxruntime must equal the C++ ORT in configs/env/pins.env, or P3 measures the
#   gap between two ORT releases instead of the gap between our two call sites.
#
#   opencv must stay on 4.x to match the C++ OpenCV 4.6 from bookworm apt. Left
#   unpinned, pip resolves 5.0 and P1 ends up comparing OpenCV majors rather than
#   our Python preprocessing against our C++ preprocessing.
#
# torch is installed separately from the CUDA index by scripts/setup_gx10.sh; the
# range here only stops a stray reinstall from PyPI.
dependencies = [
    "numpy>=2.0",
    "torch>=2.11",
    "torchvision>=0.26",
    "onnx>=1.16",
    "onnxruntime==1.27.0",
    "opencv-python-headless==4.13.0.92",
    "pyyaml>=6.0",
    "pillow>=10.0",
    "torch-pruning>=1.5",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.6"]
notebooks = ["jupyter>=1.0", "matplotlib>=3.9", "pandas>=2.2"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests/python"]
pythonpath = ["src"]
# Fail on an unregistered mark rather than silently skipping a test suite.
addopts = "-ra --strict-markers --strict-config"
markers = [
    "slow: takes more than a few seconds",
    "gpu: requires CUDA",
    "needs_data: requires the downloaded CCT-20 dataset (Gate B onward)",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
